# user-service

./: .env.local  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py
app/core/: config.py  database.py  security.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_services.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts
frontend/src/components/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
frontend/src/types/: auth.ts
